# cooddy

./: CMakeLists.txt  CMakePresets.json
analyzer/dfa/: DataFlowAnalyzer.cpp
checkers/cwe/src/: IntegerOverflowChecker.cpp
checkers/cwe/tests/suite/NullPtrDereferenceChecker/: lambda_in_condition.cpp
docs/: Build.md
include/: CompilerOptions.h
include/ast/: AccessSpecDecl.h  CharLiteralExpression.h  CxxCtorDecl.h  LambdaExpression.h  SwitchCaseStatement.h
include/utils/: SharedObjectUtils.h
parsers/cxx/: ASTVisitor.cpp  CMakeLists.txt
parsers/java/: CMakeLists.txt
reporters/: CMakeLists.txt
solver/: CMakeLists.txt  UntrustedSources.h
tests/: CMakeLists.txt
tunit/: CMakeLists.txt
utils/: CMakeLists.txt
